--- a/src/main/webapp/umc.html
+++ b/src/main/webapp/umc.html
@@ -16,7 +16,7 @@
     <!--                                           -->
     <!-- Any title is fine                         -->
     <!--                                           -->
-    <title>Web Application Starter Project</title>
+    <title>GWT Demo Client</title>
     
     <!--                                           -->
     <!-- This script loads your compiled module.   -->
@@ -41,7 +41,7 @@
       </div>
     </noscript>
 
-    <h1 style="font-family: Roboto, Geneva, sans-serif">Process Mining</h1>
+    <h1 style="font-family: Roboto, Geneva, sans-serif">Process Mining client</h1>
     <!--h2 style="text-align: center; margin: 10px 0; font-family: Roboto, Geneva, sans-serif"> * Apologies for the poor imitation :)  </h2-->
 
     <table align="center">
