introduced MVP for Login page

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -41,7 +41,12 @@
       </div>
     </noscript>
 
-    <h1 style="font-family: Roboto, Geneva, sans-serif">Process Mining client</h1>
+    <div id="login"></div>
+    <iframe src="javascript:''"
+            id="__gwt_historyFrame"
+            style="position:absolute;width:0;height:0;border:0"></iframe>
+
+    <!--<h1 style="font-family: Roboto, Geneva, sans-serif">Process Mining client</h1>
 
     <table align="center">
       <tr>
@@ -58,12 +63,16 @@
       </tr>
       <tr>
         <td id="sendButtonContainer"></td>
-      </tr><tr>
+      </tr>
+      <tr>
         <td id="loginButtonContainer"></td>
       </tr>
       <tr>
         <td colspan="2" style="color:red;" id="errorLabelContainer"></td>
       </tr>
-    </table>
+      <tr>
+        <td id="userButtonContainer"></td>
+      </tr>
+    </table>-->
   </body>
 </html>
