--- a/src/main/webapp/userinfo.html
+++ b/src/main/webapp/userinfo.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <link type="text/css" rel="stylesheet" href="umc.css">
-    <script type="text/javascript" language="javascript" src="umc/redirect.nocache.js"></script>
-    <title>Title</title>
+    <script type="text/javascript" language="javascript" src="userinfo/userinfo.nocache.js"></script>
+    <title>UserInfo</title>
 </head>
 <body>
 <div id="login"></div>
