--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,39 +1,16 @@
 <!doctype html>
-<!-- The DOCTYPE declaration above will set the     -->
-<!-- browser's rendering engine into                -->
-<!-- "Standards Mode". Replacing this declaration   -->
-<!-- with a "Quirks Mode" doctype is not supported. -->
 
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
-    <!--                                                               -->
-    <!-- Consider inlining CSS to reduce the number of requested files -->
-    <!--                                                               -->
     <link type="text/css" rel="stylesheet" href="umc.css">
-
-    <!--                                           -->
-    <!-- Any title is fine                         -->
-    <!--                                           -->
     <title>GWT Demo Client</title>
-    
-    <!--                                           -->
-    <!-- This script loads your compiled module.   -->
-    <!-- If you add any GWT meta tags, they must   -->
-    <!-- be added before this line.                -->
-    <!--                                           -->
-    <script type="text/javascript" language="javascript" src="umc/umc.nocache.js"></script>
+      <script type="text/javascript" language="JavaScript" src="oauth.js"></script>
+      <script type="text/javascript" language="javascript" src="login/login.nocache.js"></script>
   </head>
-
-  <!--                                           -->
-  <!-- The body can have arbitrary html, or      -->
-  <!-- you can leave the body empty if you want  -->
-  <!-- to create a completely dynamic UI.        -->
-  <!--                                           -->
   <body>
-
-    <!-- RECOMMENDED if your web app will not function without JavaScript enabled -->
+   <!-- RECOMMENDED if your web app will not function without JavaScript enabled -->
     <noscript>
       <div style="width: 22em; position: absolute; left: 50%; margin-left: -11em; color: red; background-color: white; border: 1px solid red; padding: 4px; font-family: sans-serif">
         Your web browser must have JavaScript enabled
@@ -45,34 +22,5 @@
     <iframe src="javascript:''"
             id="__gwt_historyFrame"
             style="position:absolute;width:0;height:0;border:0"></iframe>
-
-    <!--<h1 style="font-family: Roboto, Geneva, sans-serif">Process Mining client</h1>
-
-    <table align="center">
-      <tr>
-        <td colspan="2" style="font-weight:bold; margin: 10px 0; font-family: Roboto, Geneva, sans-serif">Enter your username:</td>
-      </tr>
-      <tr>
-        <td id="nameFieldContainer"></td>
-      </tr>
-      <tr>
-        <td colspan="2" style="font-weight:bold; margin: 10px 0; font-family: Roboto, Geneva, sans-serif">Enter your password:</td>
-      </tr>
-      <tr>
-        <td id="passwdFieldContainer"></td>
-      </tr>
-      <tr>
-        <td id="sendButtonContainer"></td>
-      </tr>
-      <tr>
-        <td id="loginButtonContainer"></td>
-      </tr>
-      <tr>
-        <td colspan="2" style="color:red;" id="errorLabelContainer"></td>
-      </tr>
-      <tr>
-        <td id="userButtonContainer"></td>
-      </tr>
-    </table>-->
-  </body>
+</body>
 </html>
